# servethis

./: .clang-format  CMakeLists.txt  main.c  main.cpp  vcpkg.json  websocket.c  websocket.h
port_overlays/getpkgconf/: portfile.cmake  vcpkg-host-pkgconf-config.cmake  vcpkg.json
port_overlays/libmicrohttpd/: configure-msvc.diff  portfile.cmake  runtimelibrary.patch  vcpkg.json
